tests/paczka1/small_fuzzy/18068708.err
Error in line 3: 30y9 A239 98,2
Error in line 13: UyR5npBBL A982 59,6
